# asterisk_agi_client

./: AGI.cpp  CMakeLists.txt  hello.cpp  hello.pl  hellowithClass.cpp  inputs  main.cpp  perl.eagi  playback.cpp  record.cpp  test.h  test_input.txt
agi_proxy/: CMakeLists.txt  command_runner.hpp  config.hpp  errors.hpp  proxy.cpp  proxy.hpp
agi_proxy/commands/: CMakeLists.txt  all.hpp  answer.hpp  base.hpp  channel_status.hpp  hangup.hpp  say_number.hpp  streamFile.hpp
